TODO:
- classpath, jamvm
- give W900V a AVM-Webinterface (from 7150)
- orangebox (?)
- bird and netsnmp don't build with more than one job
- deco

revision 65:
- worked on precompiled toolchain
- fixed netsnmp-package
- added busybox patch
- updated 7050 to 04.31
- updated 7170_phone_labor to 6572
- added deco and tinyproxy
revision 63:
- prepare for downloadable toolchain (i386)
revision 62:
- added more packages to ./packages
revision 60:
- updated netsnmp-package to 0.2
- added tinyproxy-1.7.0 package
- added deco-39 package
revision 59:
- new patch fixes mc-4.5.0 build error on GNOME systems
revision 58:
- change in lzma.mk (dos2unix no more needed, thanks aholler)
revision 57:
- remove getcons (not working for me)
- fixed typo in menuconfig (uClibc-version)
- fixed busybox patch (440-httpd_chdir.patch)
- added fon_7150
revision 56:
- fixed openvpn-lzo_conf
revision 55:
- fixed download location of target toolchain binutils
revision 54:
- fixed openvpn-lzo.cgi
revision 53:
- fixed Config.in
- fixed pingtunnel/Config.in
- fixed jamvm/Config.in
revision 52:
- fixed target "openvpn-package" (exclude .svn directories)
revision 51:
- added ./packages/openvpn-2.1_rc2/
revision 50:
- updated openssl to 0.9.8e
- updated to openvpn-2.1_rc2-dsmod-0.6c
- removed ./dl/openvpn-2.1_rc2-dsmod-0.6b.tar.bz2
revision 49:
- fixed bug in modhosts (http://www.ip-phone-forum.de/showthread.php?t=128048)
- removed packages from dl/
- updated bird.mk
revision 46:
- added 2170, 3131, 3170 and 5050 (untested)
- added cifsmount (Package and kernel-patch)
- removed iptables from vpnc-script
revision 45:
- updated dropbear to 0.49
- added debootstrap, lynx and netsnmp (thanks to derheimi)
- added gcc-4.1.2 to toolchain-options
revision 43:
- fixed classpath, fuse, jamvm, ntfs
- updated callmonitor to 1.8.3
- other small changes
revision 42:
- added 7050
revision 41:
- updated openvpn to 2.1_rc2
- downgrade matrixssl to 1.7.3 (because of download-source)
- fixed ntfs-3g (2 fuse patches)